opam-version: "2.0"
name: "isa_btree"
version: "0.0.1" # version should match a VERSION file in this dir?

# ----------------------------------------------------------------------

authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/isa_btree"
bug-reports: "https://github.com/tomjridge/isa_btree/issues"

# ----------------------------------------------------------------------

depends: [
  "num"
  "ppx_deriving_yojson"
]

# ----------------------------------------------------------------------

build: [make]

install: [make "install"]

remove: [make "uninstall"]
