opam-version: "2.0"
name: "isa_btree"
version: "0.0.1"

# ----------------------------------------------------------------------

authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/isa_btree"
bug-reports: "https://github.com/tomjridge/isa_btree/issues"

# ----------------------------------------------------------------------

depends: [
  "num"
  "ppx_deriving_yojson"
  "tjr_lib"
]

# ----------------------------------------------------------------------


build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
