opam-version : "2.0"
name         : "isa_btree_test"
version      : "0.0.1"
synopsis     : "B-tree definitions in Isabelle (test code)"

# ----------------------------------------------------------------------

authors      : "Tom Ridge <tom.j.ridge@googlemail.com>"
maintainer   : "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage     : "https://github.com/tomjridge/isa_btree"
bug-reports  : "https://github.com/tomjridge/isa_btree/issues"
dev-repo     : "git://github.com/tomjridge/isa_btree.git"

# ----------------------------------------------------------------------

depends: [
  "num"
  "yojson"
  "ppx_deriving_yojson"
  "tjr_fs_shared"
  "isa_btree"
]

# ----------------------------------------------------------------------

build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
