(env
  (dev (flags (:standard -w -8-26-27-32-37-39 -open Tjr_lib_core -open Tjr_lib -open Tjr_monad -open Tjr_fs_shared -open Isa_btree))))

(executable
  (name test_main)
;;  (public_name test_isa_btree)
  (preprocess (pps ppx_deriving_yojson))
  (libraries isa_btree tjr_monad tjr_lib_core tjr_lib tjr_fs_shared tjr_profile core))


; (library
;   (name isa_btree_test)
; ;
;   (public_name isa_btree_test)
;   (preprocess (pps ppx_deriving_yojson))
;   (libraries num yojson ppx_deriving_yojson ppx_deriving_yojson.runtime tjr_monad isa_btree tjr_lib tjr_fs_shared))
; 
