(env
  (dev (flags (:standard -w -8-26-27-32-37-39 -open Tjr_lib_core -open Tjr_lib -open Tjr_monad -open Tjr_fs_shared -open Isa_btree -open Isa_btree_intf ))))

(library
  (public_name isa_btree_test)
  (preprocess (pps ppx_deriving_yojson))
  (libraries tjr_lib isa_btree tjr_fs_shared tjr_profile))

