(env
  (dev (flags (:standard -w -8-27-26 -open Tjr_lib_core -open Tjr_lib -open Tjr_monad -open Tjr_fs_shared -open Isa_btree -open Isa_btree_test))))

(executable
  (name test_main)
;;  (public_name test_isa_btree)
  (preprocess (pps ppx_deriving_yojson))
  (libraries isa_btree isa_btree_test core))
